src/objects/CCRR__c.object
<CustomObject>
    <description>Child Care Resources and Referral</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCRR_City__c</fullName>
        <description>Location of regional CCRR City</description>
        <label>CCRR City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCRR_ID__c</fullName>
        <description>CCRR ID</description>
        <label>CCRR ID</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CCRR</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CCRR_City__c</columns>
        <columns>CCRR_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCRR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>